html rough outline

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- page container -->
         <div class="container row">
             <div class="col-4 bg-light">
-                <!-- left hand container to search for a city and history -->
+                <!-- left hand side page container to search for a city and history -->
                 <div class="container" id="search">
                     <!-- search for a city function -->
                     <div class="row" id="search-city">
@@ -38,10 +38,63 @@
                 <!-- search history section -->
                 <div class="row" id="search-history">
                     <div class="w-100" id="history-list">
-                        <button class="btn btn-lg btn-outline-info text-dark w-100 text-left mt-2">Test City</button>
+                        <button class="btn btn-lg btn-outline-secondary text-dark w-100 text-left mt-2">Placeholder Search History</button>
                     </div>
                 </div>
             </div>
+
+                <!-- right hand side page container -->
+                <div class="col-8">
+                    <div class="container border border-secondary rounded w-100 mx-auto m-3" id="current-conditions">
+                        <div class="row">
+                            <h3 id="current-city">Placeholder for current city</h3>
+                            <h3 id="current-date">06/12/2020 Placeholder</h3>
+                            <div id="future-icon">
+                                <!-- add future icon here -->
+                            </div>
+                        </div>
+                        <div class="row">
+                            <h4 class="font-weight-normal" id="temperature">
+                                Temperature
+                            </h4>
+                        </div>
+                        <div class="row">
+                            <h4 class="font-weight-normal" id="humidity">
+                                Humidity
+                            </h4>
+                        </div>
+                        <div class="row">
+                            <h4 class="font-weight-normal" id="wind-speed">
+                                Wind Speed
+                            </h4>
+                        </div>
+                        <div class="row">
+                            <h4 class="font-weight-normal" id="uv-index">
+                                UV Index
+                            </h4>
+                        </div>
+                    </div>
+                    <div class="container row">
+                        <h3 class="col-12">
+                            5-Day Forcast:
+                        </h3>
+                        <div class="col">
+                            <div class="card">
+                                <div>
+                                    <h5>
+                                        June 12, 2020
+                                    </h5>
+                                    <p>
+                                        Temp
+                                    </p>
+                                    <p>
+                                        Humidity
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </div>
         
     </main>
