added moment cdn

--- a/index.html
+++ b/index.html
@@ -123,5 +123,6 @@
     </main>
     
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
 <script src="assets/js/script.js"></script>
 </html>
