updated current weather function in JS, added current day info

--- a/index.html
+++ b/index.html
@@ -47,14 +47,11 @@
                 <div class="col-8">
                     <div class="container border border-secondary rounded w-100 mx-auto m-3" id="current-conditions">
                         <div class="row">
-                            <h3 id="current-city">Placeholder for current city</h3>
-                            <h3 id="current-date">06/12/2020 Placeholder</h3>
-                            <!-- add future icon here -->
-                            <div id="future-icon"></div>
+                            <h3 id="current-city"></h3>
                         </div>
-                        <p>Temperature: <span id="current-temperature"></span></p>
-                        <p>Humidity: <span id="current-humidity"></span></p>
-                        <p>Wind Speed: <span id="current-windspeed"></span></p>
+                        <p>Temperature: <span id="current-temperature"></span> &#176;</p>
+                        <p>Humidity: <span id="current-humidity"></span> %</p>
+                        <p>Wind Speed: <span id="current-windspeed"></span>  MPH</p>
                         <p>UV Index: <span id="current-uv-index"></span></p>
                     </div>
                     <div class="container row" id="forcast">
