--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                             <div class="card bg-primary text-light w-100">
                                 <div>
                                     <h5 id="day-1">Date</h5>
+                                    <img id="image-1" src="" alt="">
                                     <!-- look for weather icon to add here-->
-                                    <div id="icon-1">Future Icon Here</div>
                                     <p>Temp: <span id="temp-1"></span></p>
                                     <p>Humidity: <span id="humidity-1"></span></p>
                                 </div>
@@ -74,7 +74,7 @@
                                 <div>
                                     <h5 id="day-2">Date</h5>
                                     <!-- look for weather icon to add here-->
-                                    <div id="icon-2">Future Icon Here</div>
+                                    <img id="image-2" src="" alt="">
                                     <p>Temp: <span id="temp-2"></span></p>
                                     <p>Humidity: <span id="humidity-2"></span></p>
                                 </div>
@@ -85,7 +85,7 @@
                                 <div>
                                     <h5 id="day-3">Date</h5>
                                     <!-- look for weather icon to add here-->
-                                    <div id="icon-3">Future Icon Here</div>
+                                    <img id="image-3" src="" alt="">
                                     <p>Temp: <span id="temp-3"></span></p>
                                     <p>Humidity: <span id="humidity-3"></span></p>
                                 </div>
@@ -96,7 +96,7 @@
                                 <div>
                                     <h5 id="day-4">Date</h5>
                                     <!-- look for weather icon to add here-->
-                                    <div id="icon-4">Future Icon Here</div>
+                                    <img id="image-4" src="" alt="">
                                     <p>Temp: <span id="temp-4"></span></p>
                                     <p>Humidity: <span id="humidity-4"></span></p>
                                 </div>
@@ -107,7 +107,7 @@
                                 <div>
                                     <h5 id="day-5">Date</h5>
                                     <!-- look for weather icon to add here-->
-                                    <div id="icon-5">Future Icon Here</div>
+                                    <img id="image-5" src="" alt="">
                                     <p>Temp: <span id="temp-5"></span></p>
                                     <p>Humidity: <span id="humidity-5"></span></p>
                                 </div>
