centered header and removed outdated notes

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <title>Weather Dashboard</title>
 </head>
 <body>
-    <!-- Try to see if the text can be centered later -->
-    <nav class="navbar navbar-dark bg-dark ht-100">
+    <nav class="navbar navbar-dark bg-dark ht-100 justify-content-center">
         <a href="#" class="navbar-brand">
            <h1>Weather Dashboard</h1>
         </a>
@@ -63,7 +62,6 @@
                                 <div>
                                     <h5 id="day-0">Date</h5>
                                     <img id="image-0" src="" alt="">
-                                    <!-- look for weather icon to add here-->
                                     <p>Temp: <span id="temp-0"></span></p>
                                     <p>Humidity: <span id="humidity-0"></span></p>
                                 </div>
@@ -73,7 +71,6 @@
                             <div class="card bg-primary text-light w-100">
                                 <div>
                                     <h5 id="day-1">Date</h5>
-                                    <!-- look for weather icon to add here-->
                                     <img id="image-1" src="" alt="">
                                     <p>Temp: <span id="temp-1"></span></p>
                                     <p>Humidity: <span id="humidity-1"></span></p>
@@ -84,7 +81,6 @@
                             <div class="card bg-primary text-light w-100">
                                 <div>
                                     <h5 id="day-2">Date</h5>
-                                    <!-- look for weather icon to add here-->
                                     <img id="image-2" src="" alt="">
                                     <p>Temp: <span id="temp-2"></span></p>
                                     <p>Humidity: <span id="humidity-2"></span></p>
@@ -95,7 +91,6 @@
                             <div class="card bg-primary text-light w-100">
                                 <div>
                                     <h5 id="day-3">Date</h5>
-                                    <!-- look for weather icon to add here-->
                                     <img id="image-3" src="" alt="">
                                     <p>Temp: <span id="temp-3"></span></p>
                                     <p>Humidity: <span id="humidity-3"></span></p>
@@ -106,7 +101,6 @@
                             <div class="card bg-primary text-light w-100">
                                 <div>
                                     <h5 id="day-4">Date</h5>
-                                    <!-- look for weather icon to add here-->
                                     <img id="image-4" src="" alt="">
                                     <p>Temp: <span id="temp-4"></span></p>
                                     <p>Humidity: <span id="humidity-4"></span></p>
