added save/search history functions to make the storage of searched citys persistent

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <!-- search history section -->
                 <div class="row" id="search-history">
                     <div class="w-100" id="history-list">
-                        <button class="btn btn-lg btn-outline-secondary text-dark w-100 text-left mt-2">Placeholder Search History</button>
+                        <!-- <button class="btn btn-lg btn-outline-secondary text-dark w-100 text-left mt-2">Placeholder Search History</button> -->
                     </div>
                 </div>
             </div>
